Features: -new functions

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #General:
-linkAddress = https://www.google.com/
+linkAddress = https://page.pl/
 implicitlyWaitTime = 4
 pageLoadTime = 60
-searchLinkAddress = https://www.facebook.com/
+searchLinkAddress = https://www.youtube.com/
 
 #linkedin:
 loginEmail = loginEmail@sample.sa
