Features: - BrowserFunctions: switch methods implemented

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #General:
-linkAddress = https://page.pl/
+linkAddress = about:blank
 implicitlyWaitTime = 4
 pageLoadTime = 60
-searchLinkAddress = https://www.youtube.com/
+searchLinkAddress = https://vorexlogin.com/
 
 #linkedin:
 loginEmail = loginEmail@sample.sa
