Features: - Gui: random thumbs

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,6 +10,7 @@ loginPassword = pass123
 
 #Email:
 sendReport = false
+#receiverEmail = ig.jakimiuk@gmail.com
 receiverEmail = rav52v@gmail.com
 senderEmail = otomoto.framework@gmail.com
 emailLogin = otomoto.framework@gmail.com
