Features: - Turbo Gui

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 linkAddress = about:blank
 implicitlyWaitTime = 4
 pageLoadTime = 60
-searchLinkAddress = https://vorexlogin.com/
+searchLinkAddress = https://soflab.pl/
 
 #linkedin:
 loginEmail = loginEmail@sample.sa
@@ -11,6 +11,7 @@ loginPassword = pass123
 #Email:
 sendReport = false
 #receiverEmail = ig.jakimiuk@gmail.com
+#receiverEmail = opinia@telepizza.pl
 receiverEmail = rav52v@gmail.com
 senderEmail = otomoto.framework@gmail.com
 emailLogin = otomoto.framework@gmail.com
