--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <version>4.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
