--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>3.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.cfg4j</groupId>
+            <artifactId>cfg4j-core</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
