--- a/src/main/resources/config/email.yaml
+++ b/src/main/resources/config/email.yaml
@@ -1,5 +1,5 @@
 email:
-  receiverEmail: rav52v@gmail.com
+  receiverEmail: ig.jakimiuk@gmail.com
   senderEmail: otomoto.framework@gmail.com
   login: otomoto.framework@gmail.com
   password: rafal1234567890
