--- a/src/main/resources/config/general.yaml
+++ b/src/main/resources/config/general.yaml
@@ -1,6 +1,7 @@
 general:
   linkAddress: about:blank
   implicitlyWaitTime: 8
+  webDriverWait: 5
   pageLoadTime: 60
   searchLinkAddress: https://www.google.com/
   headless: false
