--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>4.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
