--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>1.12.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.15</version>
+        </dependency>
+
     </dependencies>
 
     <build>
