--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>2.0.15</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>vget</artifactId>
+            <version>1.1.33</version>
+        </dependency>
+
     </dependencies>
 
     <build>
