Features: Screen Recorder

--- a/src/main/resources/config/general.yaml
+++ b/src/main/resources/config/general.yaml
@@ -4,4 +4,5 @@ general:
   webDriverWait: 5
   pageLoadTime: 60
   searchLinkAddress: https://www.google.com/
-  headless: true
+  headless: false
+  recordScreen: false
