--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>1.1.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.stephenc.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
