--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>0.7.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.18</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
